--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoVersion"
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    implementation 'com.google.code.gson:gson:2.2.4'
+
 }
 
 if (project.hasProperty("antennaPodServiceAccountEmail")) {
